tests/codegen/fail/union/derive_wrong_item.rs
use juniper::GraphQLUnion;

#[derive(GraphQLUnion)]
union Character { id: i32 }

fn main() {}
